# jazz-band

./: .env.template  .gitignore  2048.py  CLAUDE.md  Dante_Intro.mid  EVOLUTION_REPORT.md  PARALLEL_JUDGE_GUIDE.md  README.md  Searching_for_the_Light.mid  TODO.md  Wait_for_It.mid  analyze_evolution.py  analyze_hacking.py  analyze_training.py  cellar_intro.mid  dante_4_bar_intro.mid  dante_cellar_intro.mid  dante_intro.mid  dante_russo_intro.mid  dante_shorter_intro.mid  f_major_intro.mid  fm_intro.mid  index.html  intro.mid  intro_in_Fm.mid  intro_wayne.mid  jazz_intro.mid  jazz_intro_d_minor.mid  jazz_intro_f_major.mid  jazz_intro_f_minor.mid  jazz_intro_fm.mid  pyproject.toml  quiet_storm.mid  run.md  run_gepa.sh  run_rlvr_with_retry.sh  run_with_retry.sh  scripts.js  styles.css  test_judge_structure.py  (+2 more)
archive/: PARALLEL_JUDGE_GUIDE.md  analyze_rlvr_run.py  metric_rewards_simple.html  rlvr_analysis_report.html  rlvr_deep_dive_findings.html  rlvr_metric_contributions.html  simple_metric_plots.py  visualize_metric_contributions.py
artifacts/: training_analysis.html
baselines/: notes.md  reward_stats.json  run.py
gepa/: __init__.py  __main__.py  eval.py  evaluate.py  genes_schema.yaml  loop.py  mutate.py  pareto.py  population.py  smoke_test.py
prompts/: composer.md  drums_anticipation.md  drums_anticipation_deep.md  drums_grounded.md  drums_pushpull.md  drums_swing.md  drums_swing_deep.md  drums_whisper.md  judge.md
reference_riffs/: README.md  cantina_jazzband.mid  moanin_jazzband.mid  songformyfather_jazzband.mid  sowhat_jazzband.mid  watermelon_jazzband.mid
(+52653 files in other folders)
