[project]
name = "jazz-band"
version = "0.1.0"
description = "Multi-instrument symbolic music jam system with AI agents"
requires-python = ">=3.10"
dependencies = [
    "pretty_midi>=0.2.10",
    "wandb>=0.18.0",
    "weave>=0.51.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "openpipe-art>=0.5.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
